--- a/f4mine-build.ipynb
+++ b/f4mine-build.ipynb
@@ -122,7 +122,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "dict_keys(['threshold', 'input_pitch', 'binary_array', 'structure_size_nm', 'labelled_regions', 'centers_pix', 'areas_pix', 'bounding_boxes_pix', 'euler_numbers', 'structure_size_fab', 'pix_size', 'pitch_nm', 'pitch_fab', 'total_resistances', 'resistance_calculated_flag', 'dwell_list', 'layer_height', 'centers', 'areas'])\n"
+      "dict_keys(['threshold', 'input_pitch', 'binary_array', 'structure_size_nm', 'labelled_regions', 'centers_pix', 'areas_pix', 'bounding_boxes_pix', 'euler_numbers', 'structure_size_fab', 'pix_size', 'pitch_nm', 'pitch_fab', 'areas', 'total_resistances', 'resistance_calculated_flag', 'dwell_list', 'layer_height', 'centers'])\n"
      ]
     }
    ],
@@ -156,8 +156,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now let's calculate dwells with our resistance. There are two ways to do this. One method involves K-Tree nearest neighbor lookup, while another involves a fourier-space convolution between each layer and the inverse of a gaussian. The second method aims to correct for the gaussian blurring that will be caused by the beam."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -165,6 +172,8 @@
      "output_type": "stream",
      "text": [
       "Layer resistances calculated\n",
+      "The path difference is 1\n",
+      "The path difference is 2\n",
       "Total resistances calculated\n"
      ]
     },
@@ -228,7 +237,9 @@
     }
    ],
    "source": [
-    "mod.calculate_resistance()"
+    "import dwell\n",
+    "\n",
+    "solver = dwell.ProximityMethod()"
    ]
   }
  ],
@@ -248,7 +259,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.15"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
