--- a/f4mine-build.ipynb
+++ b/f4mine-build.ipynb
@@ -21,6 +21,7 @@
    "outputs": [],
    "source": [
     "from f4mine import sem\n",
+    "from matplotlib import pyplot as plt\n",
     "\n",
     "sem_settings = sem.SEM(addressable_pixels=[65536, 56576],\n",
     "                    screen_width=10.2e3,\n",
@@ -144,15 +145,47 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Layer resistances calculated\n",
+      "The path difference is 1\n",
+      "The path difference is 2\n",
+      "Total resistances calculated\n"
+     ]
+    }
+   ],
    "source": [
     "from f4mine import model \n",
     "\n",
     "GR0 = 250e-3 # in um/s, base growth rate\n",
-    "k = 1.5 # in 1/nm?, thermal conductivity \n",
+    "k = 1.5 # in 1/nm?, thermal conductivity\n",
     "sigma = 4.4 # in nm, dwell size\n",
     "\n",
-    "mod = model.ArrayModel(branched_trio, gr=GR0, k=k, sigma=sigma, single_pixel_width=50, rho=1)\n"
+    "mod = model.ArrayModel(branched_trio, gr=GR0, k=k, sigma=sigma, single_pixel_width=50, rho=1)\n",
+    "\n",
+    "mod.calculate_resistance()\n",
+    "resarr1 = branched_trio.total_resistances"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### We can resize the binary array and resistance array to get more fabrication points. By doing this after the previous steps, we can use an efficient spline interpolation to increase our fabrication density.\n",
+    "\n",
+    "### Note that this overrides the object's property and this is not yet undoable!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "branched_trio.resize([300,300,300])"
    ]
   },
   {
@@ -164,82 +197,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Layer resistances calculated\n",
-      "The path difference is 1\n",
-      "The path difference is 2\n",
-      "Total resistances calculated\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "TrackedArray([[[0., 0., 0., ..., 0., 0., 0.],\n",
-       "               [0., 0., 0., ..., 0., 0., 0.],\n",
-       "               [0., 0., 0., ..., 0., 0., 0.],\n",
-       "               ...,\n",
-       "               [0., 0., 0., ..., 0., 0., 0.],\n",
-       "               [0., 0., 0., ..., 0., 0., 0.],\n",
-       "               [0., 0., 0., ..., 0., 0., 0.]],\n",
-       "\n",
-       "              [[0., 0., 0., ..., 0., 0., 0.],\n",
-       "               [0., 0., 0., ..., 0., 0., 0.],\n",
-       "               [0., 0., 0., ..., 0., 0., 0.],\n",
-       "               ...,\n",
-       "               [0., 0., 0., ..., 0., 0., 0.],\n",
-       "               [0., 0., 0., ..., 0., 0., 0.],\n",
-       "               [0., 0., 0., ..., 0., 0., 0.]],\n",
-       "\n",
-       "              [[0., 0., 0., ..., 0., 0., 0.],\n",
-       "               [0., 0., 0., ..., 0., 0., 0.],\n",
-       "               [0., 0., 0., ..., 0., 0., 0.],\n",
-       "               ...,\n",
-       "               [0., 0., 0., ..., 0., 0., 0.],\n",
-       "               [0., 0., 0., ..., 0., 0., 0.],\n",
-       "               [0., 0., 0., ..., 0., 0., 0.]],\n",
-       "\n",
-       "              ...,\n",
-       "\n",
-       "              [[0., 0., 0., ..., 0., 0., 0.],\n",
-       "               [0., 0., 0., ..., 0., 0., 0.],\n",
-       "               [0., 0., 0., ..., 0., 0., 0.],\n",
-       "               ...,\n",
-       "               [0., 0., 0., ..., 0., 0., 0.],\n",
-       "               [0., 0., 0., ..., 0., 0., 0.],\n",
-       "               [0., 0., 0., ..., 0., 0., 0.]],\n",
-       "\n",
-       "              [[0., 0., 0., ..., 0., 0., 0.],\n",
-       "               [0., 0., 0., ..., 0., 0., 0.],\n",
-       "               [0., 0., 0., ..., 0., 0., 0.],\n",
-       "               ...,\n",
-       "               [0., 0., 0., ..., 0., 0., 0.],\n",
-       "               [0., 0., 0., ..., 0., 0., 0.],\n",
-       "               [0., 0., 0., ..., 0., 0., 0.]],\n",
-       "\n",
-       "              [[0., 0., 0., ..., 0., 0., 0.],\n",
-       "               [0., 0., 0., ..., 0., 0., 0.],\n",
-       "               [0., 0., 0., ..., 0., 0., 0.],\n",
-       "               ...,\n",
-       "               [0., 0., 0., ..., 0., 0., 0.],\n",
-       "               [0., 0., 0., ..., 0., 0., 0.],\n",
-       "               [0., 0., 0., ..., 0., 0., 0.]]])"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import dwell\n",
+    "from f4mine import dwell\n",
     "\n",
-    "solver = dwell.ProximityMethod()"
+    "sigma = 4.4 \n",
+    "pitch = 10\n",
+    "gr = 250\n",
+    "k = 1.5\n",
+    "sem_params = {\"GR0\": gr, \"k\":k}\n",
+    "\n",
+    "solver = dwell.ConvolutionMethod(branched_trio, sigma, pitch=pitch, filter=\"inverse_gaussian\", calibration_parameters=sem_params, kernel_size=5)\n",
+    "output = solver.convolution_solve()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# TO DO: Get dwells from solver.dwells and put into a stream file!"
    ]
   }
  ],
@@ -259,7 +238,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.10"
+   "version": "3.10.15"
   }
  },
  "nbformat": 4,
